--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,34 +1,29 @@
 <h1>Listado de productos</h1>
 
-{{#each products}}
-  <li>
-    <p><b>Id:</b>
-      {{this.id}}
-      ||
-      <b>Nombre:</b>
-      {{this.title}}
-      ||
-      <b>Descripción:</b>
-      {{this.description}}
-      ||
-      <b>Precio:</b>
-      {{this.price}}
-      ||
-      <b>Imágen:</b>
-      {{this.thumbnail}}
-      ||
-      <b>Código:</b>
-      {{this.code}}
-      ||
-      <b>Stock:</b>
-      {{this.stock}}
-      ||
-      <b>Estado:</b>
-      {{this.status}}
-      ||
-      <b>Categoría:</b>
-      {{this.category}}
-    </p>
-  </li>
+<table border="solid">
+  <tr>
+    <th>Id</th>
+    <th>Nombre</th>
+    <th>Descripción</th>
+    <th>Precio</th>
+    <th>Imágen</th>
+    <th>Código</th>
+    <th>Stock</th>
+    <th>Estado</th>
+    <th>Categoría</th>
+  </tr>
+  {{#each products}}
+    <tr>
+      <td> {{this.id}}</td>
+      <td> {{this.title}}</td>
+      <td>{{this.description}}</td>
+      <td>{{this.price}}</td>
+      <td> {{this.thumbnail}}</td>
+      <td> {{this.code}}</td>
+      <td>{{this.stock}}</td>
+      <td>{{this.status}}</td>
+      <td> {{this.category}}</td>
+    </tr>
+  {{/each}}
 
-{{/each}}
+</table>
